@@ -136,7 +136,7 @@ Colors used:
 
 /*** FORUM TOPICS **********************************************************/
 
-.forum-post {
+div.forum-post {
   border: 1px solid #C8DBEA !important;
 }
 
