@@ -155,7 +155,7 @@ Colors used:
 
 /*** FORUM TOPICS **********************************************************/
 
-.forum-post {
+div.forum-post {
   border: 1px solid #C1C1C1;
 }
 
